--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 30
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.hilbing.profilecardlayoutcompose"
         minSdk 21
-        targetSdk 30
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -59,6 +59,8 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.1'
     //import drawables from internet
     implementation "io.coil-kt:coil-compose:1.3.2"
+    //navigation for compose
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha08"
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
